@@ -1,3 +1,7 @@
+2002-11-27  Bill Bumgarner  <bbum@codefab.com>
+	* make_distrib.py automatically removes CVS directories and
+	.DS_Store files from tree before packaging.
+
 2002-11-25 Ronald Oussoren <oussoren@cistron.nl>
 	* Examples/{TableModel, CurrencyConverter, Todo}:
 	  - Use NibClassBuilder module
